[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = ""
authors = ["Ornihex <ornihex@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
task_cli = 'task_tracker.main:main'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
